# dual_arm_middleware

./: .clangd  .gitignore  CMakeLists.txt  README.md
config/: system.json
docs/: preview.md  protocol.md
src/: CMakeLists.txt  common_types.hpp  main.cpp
src/comm/: CMakeLists.txt  serial_port.cpp  serial_port.hpp
src/config/: CMakeLists.txt  config_loader.cpp  config_loader.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/state/: CMakeLists.txt  arm_state_hub.cpp  arm_state_hub.hpp
src/trajectory/: CMakeLists.txt  trajectory_generator.cpp  trajectory_generator.hpp
src/utils/: CMakeLists.txt  ring_buffer.hpp  state_machine.cpp  state_machine.hpp  thread_pool.hpp
src/watchdog/: CMakeLists.txt  watchdog.cpp  watchdog.hpp
tests/: CMakeLists.txt  test_logger.cpp  test_ring_buffer.cpp  test_state_machine.cpp
